# msc-finals

./: .gitignore  Abdul_Rehman_B01753459 (1).docx  Makefile  README.md  futureinternet-4330203-done (1).tex  pyproject.toml  requirements.txt  train_content_ae.py  train_session_lstm_vae.py
artifacts/content/: config.json  model.pt  scaler.joblib
artifacts/eval/: ablation_table.csv  baseline_metrics_iforest_access_attacks_200.json  baseline_metrics_iforest_access_eval_mix_2000.json  baseline_metrics_iforest_access_eval_small_500.json  baseline_metrics_iforest_access_mixed_500.json  baseline_metrics_iforest_access_small_benign.json  baseline_metrics_iforest_access_super_long_session_2000.json  baseline_metrics_iforest_csic_eval.json  baseline_metrics_iforest_nginx_json_eval_800.json  baseline_metrics_ocsvm_access_attacks_200.json  baseline_metrics_ocsvm_access_eval_mix_2000.json  baseline_metrics_ocsvm_access_eval_small_500.json  fusion_sweep.csv  (+32 more)
configs/: config.yaml
paper/: weblog_anomaly_paper.fdb_latexmk  weblog_anomaly_paper.fls  weblog_anomaly_paper.tex
scripts/: ablation_table.py  advanced_plots.py  auc_histogram.py  auc_histograms_all.py  benchmark_latency.py  build_paper_bundle.py  compare_session_versions.py  convert_common_to_combined.py  csic_csv_to_combined.py  evaluate_file.py  fusion_weight_sweep.py  heuristic_label_logs.py  histograms.py  label_generated_logs.py  peek_log.py  plot_and_baselines.py  plot_evals.py  recompute_metrics.py  reconstruct_logs.py  score_hist_single_overlay.py  score_hist_threshold.py  tail_and_send.py  threshold_transfer.py
(+33 files in other folders)
